ui/src/app/input-pane/input-pane.component.scss
:host {
  background-color: #FFF;
  margin: 10px;
  margin-right: 5px;
  padding: 16px;
  border-radius: 10px;
  min-width: 350px;
  width: 25%;
  flex: 0 0 auto;
}

.playback-speed-container {
  padding: 10px;
  text-align: center;
}

.dropzone {
  height: 100%;
  background-color: #e8ecf9;
  padding: 2em 1em;
  margin: 10px;
  text-align: center;
  // Vertical center text.
  display: flex;
  align-items: center;
  cursor: default;
  display: block;
  border-radius: 20px;
  border: 2px dashed #555;
}

.dragging {
  background-color: #c5d0f3;
}

input {
  display: none;
}

.usb-connect-pane, .logging-pane {
  text-align: center;
  padding: 20px 10px;
}

.tuner-pane {
  text-align: center;
}

.frequency {
  margin: 0 10px;
  padding: 3px;
  background-color: #448;
  color: #AEF;
  display: inline-block;
  vertical-align: top;
  width: 10em;
  height: 2em;
}

.processingChain {
  padding: 20px 10px;
  text-align: center;
}

.processingChain > div:not(:last-child) {
  padding-bottom: 20px;
  border-bottom: 1px solid #666;
  margin-bottom: 20px;
}

.hidden {
  display: none;
}

::ng-deep .input_tabs .mat-mdc-tab-body-wrapper {
  display: block !important;
}

